tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__function_def-5.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"\n        fun func(a: Num, b: Text, c: Bool): Num {\n            echo 10\n\n            return 10\n        }\n    \").unwrap()"
---
Statement(
    [
        FunctionDefinition(
            (),
            "func",
            (),
            [
                Typed(
                    Variable(
                        "a",
                    ),
                    Type(
                        (),
                        "Num",
                    ),
                ),
                Typed(
                    Variable(
                        "b",
                    ),
                    Type(
                        (),
                        "Text",
                    ),
                ),
                Typed(
                    Variable(
                        "c",
                    ),
                    Type(
                        (),
                        "Bool",
                    ),
                ),
            ],
            (),
            Some(
                Type(
                    (),
                    "Num",
                ),
            ),
            (),
            [
                Echo(
                    (),
                    Number(
                        10.0,
                    ),
                ),
                Return(
                    (),
                    Some(
                        Number(
                            10.0,
                        ),
                    ),
                ),
            ],
            (),
        ),
    ],
)
