tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__function_def.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"fun func() {}\").unwrap()"
---
Statement(
    [
        FunctionDefinition(
            (),
            "func",
            (),
            [],
            (),
            None,
            (),
            [],
            (),
        ),
    ],
)
