tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__function_invocation-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"func(1)\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                FunctionInvocation(
                    Variable(
                        "func",
                    ),
                    (),
                    [
                        Number(
                            1.0,
                        ),
                    ],
                    (),
                ),
            ),
        ),
    ],
)
