tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__function_invocation.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"func()\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                FunctionInvocation(
                    Variable(
                        "func",
                    ),
                    (),
                    [],
                    (),
                ),
            ),
        ),
    ],
)
